###################################################################
#
# uHTTP for C++
#
# Copyright (C) Satoshi Konno 2002-2012
#
# This is licensed under BSD-style license, see file COPYING.
#
###################################################################

SUBDIRS = include lib

if UHTTP_ENABLE_EXAMPLES
SUBDIRS += examples
endif

if UHTTP_ENABLE_TEST
SUBDIRS += test
endif
