############################################################
#
# uHTTP for C++
#
# Copyright (C) Satoshi Konno 2002
#
############################################################

uhttpcc_header = \
	./uhttp/HTTP.h \
	./uhttp/http/HTTP.h \
	./uhttp/http/HTTPServerList.h \
	./uhttp/http/HTTPDate.h \
	./uhttp/http/HTTPRequestListener.h \
	./uhttp/http/HTML.h \
	./uhttp/http/HTTPResponse.h \
	./uhttp/http/HTTPStatus.h \
	./uhttp/http/HTTPPacket.h \
	./uhttp/http/Parameter.h \
	./uhttp/http/HTTPWorkerThread.h \
	./uhttp/http/HTTPRequest.h \
	./uhttp/http/HTTPServer.h \
	./uhttp/http/HTTPSocket.h \
	./uhttp/http/HTTPMessageQueue.h \
	./uhttp/http/HTTPHeader.h \
	./uhttp/http/ParameterList.h \
	./uhttp/net/URI.h \
	./uhttp/net/DatagramSocket.h \
	./uhttp/net/Socket.h \
	./uhttp/net/SocketInputStream.h \
	./uhttp/net/InetSocketAddress.h \
	./uhttp/net/DatagramPacket.h \
	./uhttp/net/SocketCore.h \
	./uhttp/net/URL.h \
	./uhttp/net/NetworkInterface.h \
	./uhttp/net/MulticastSocket.h \
	./uhttp/net/NetworkInterfaceList.h \
	./uhttp/net/HostInterface.h \
	./uhttp/net/SocketUtil.h \
	./uhttp/net/ServerSocket.h \
	./uhttp/io/BufferedReader.h \
	./uhttp/io/InputStreamReader.h \
	./uhttp/io/FileInputStream.h \
	./uhttp/io/StringReader.h \
	./uhttp/io/StringBufferInputStream.h \
	./uhttp/io/LineNumberReader.h \
	./uhttp/io/InputStream.h \
	./uhttp/io/Reader.h \
	./uhttp/io/File.h \
	./uhttp/io/FileList.h \
	./uhttp/platform.h \
	./uhttp/util/Thread.h \
	./uhttp/util/Semaphore.h \
	./uhttp/util/Exception.h \
	./uhttp/util/StringUtil.h \
	./uhttp/util/Mutex.h \
	./uhttp/util/Vector.h \
	./uhttp/util/TimeUtil.h \
	./uhttp/util/StringTokenizer.h \
	./uhttp/util/Random.h \
	./uhttp/util/Logger.h \
	./uhttp/util/LoggerTarget.h \
	./uhttp/util/Listener.h \
	./uhttp/util/Date.h \
	./uhttp/util/Log.h \
	./uhttp/util/Debug.h \
	./uhttp/util/MessageQueue.h \
	./uhttp/util/LoggerStdTarget.h \
	./uhttp/util/LoggerFileTarget.h

nobase_include_HEADERS = \
	$(uhttpcc_header)
