noinst_PROGRAMS = uhttpcctestunit

INCLUDES = -I$(top_srcdir)/include -I../

uhttpcctestunit_SOURCES = \
	../uHTTDateTests.cpp \
	../uHTTPGetTests.cpp \
	../uHTTPMutexTests.cpp \
	../uHTTPNetworkInterfaceTests.cpp \
	../uHTTPPacketTests.cpp \
	../uHTTPRequest.cpp \
	../uHTTPServerTests.cpp \
	../uHTTPSocketTests.cpp \
	../uHTTPStringTests.cpp \
	../uHTTPTestMain.cpp \
	../uHTTPThreadTests.cpp \
	../uHTTPUriTests.cpp

uhttpcctestunit_LDADD = ../../lib/unix/libuhttp++.a
